[package]
name = "distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost="0.11.6"
tokio="1.25.0"
mongodb = "2.3.1"

serde = {version="1.0.152", features=["derive"]}
serde_json="1.0.92"

[build-dependencies]
tonic-build="0.8.4"