[package]
name = "distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost="0.11.6"
tokio="1.25.0"
mongodb = "2.3.1"
futures = "0.3.26"

serde = {version="1.0.152", features=["derive"]}
serde_json="1.0.92"

# Utils
lazy_static = "1.4.0"

# Custom
sunburst_utils = { version = "0.1.0", path="../commons/rs/utils"}
sunburst_connection = { version = "0.1.0", path="../commons/rs/connection"}
sunburst_models = { version = "0.1.0", path="../commons/rs/models"}

[build-dependencies]
tonic-build="0.8.4"