[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]
readme = "README.md"
packages = [{include = "integration_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
behave = "^1.2.6"
rtoml = "^0.9.0"
docker = "^6.0.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
