[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart", "cookies"] }
tokio = { version = "1.24.1", features = ["full"] }

# Serde
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"

# Utils
toml="0.7.1"
lazy_static ="1.4.0"
regex="1.7.1"
