[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart", "cookies"] }
tokio = { version = "1.24.1", features = ["full"] }
mongodb = { version = "2.3.1", features = [
    "bson-serde_with",
    "bson-chrono-0_4",
] }
os_info = "3.6.0"

# Serde
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_with = "2.2.0"

# Utils
toml = "0.7.1"
lazy_static = "1.4.0"
regex = "1.7.1"
chrono = {version="0.4.23", features=["serde"]}

rs_models = { version = "0.1.1", path="../commons/rs/models"}
sunburst_utils = {version="0.1.0", path="../commons/rs/utils"}
sunburst_connection = { version = "0.1.0", path="../commons/rs/connection"}