[tool.poetry]
name = "py-rest"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]
readme = "README.md"
packages = [{include = "py_rest"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
rtoml = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
