[package]
name = "rs_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Grpc

tonic = "0.8.3"
prost="0.11.6"

# REST
axum = "0.6.4"
hyper = { version = "0.14.23", features = ["full"] }
tower = "0.4.13"
tower-http ={version="0.3.5", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = "0.3"


# Runtime 
tokio={version="1.25.0", features=["full"]}

# Serialization
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.92"

# Utils
lazy_static = "1.4.0"
chrono="0.4.23"

# Custom
sunburst_utils = { version = "0.1.0", path="../../commons/rs/utils"}
sunburst_models = { version = "0.1.0", path="../../commons/rs/models"}

[build-dependencies]
tonic-build="0.8.4"