[tool.poetry]
name = "py-models"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]
readme = "README.md"
packages = [{include = "py_models"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
