[package]
name = "sunburst_connection"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
sunburst_utils = {version="0.1.0", path="../utils"}
redis = { version = "0.22.3", features = ["tokio-comp","serde", "serde_json"] }
