[package]
name = "sunburst_models"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"

# Data types
chrono={version="0.4.23", features=["serde"]}

